--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
         <div id="root">
             
         </div>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Mono" rel="stylesheet">
         <script type="text/javascript" src="./bundle.js"></script>
     </body>
 </html>
