--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
         <div id="root">
             
         </div>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <script type="text/javascript" src="./index.js"></script>
     </body>
 </html>
