--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>React Project</title>
+        <title>In-Shorts</title>
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=0">
     </head>
     <body>
         <div id="root">
